# Integrated-Therapy-Software

./: .env.example  .gitignore  Effort Matrix.md  FinalDesignReport-Spring.md  FinalDesignReport.md  Individual_Capstone_Assessment_Richard_Roberts.docx  MilestronesTimeline.md  README.md  Tasklist.md  UserDocs.md  package-lock.json  package.json
cbt_chatbot/: README.md  manage.py  package-lock.json  package.json  pyproject.toml
cbt_chatbot/back-end/: db.sqlite3  db_setup.md  requirements.txt  wagtail_setup.md
cbt_chatbot/back-end/backend_function_calls/: cache_utils.py  cbt_module.py  chat_modes.py  journal_module.py  session_utils.py  tool_functions.py  tools.py  views.py
cbt_chatbot/back-end/backend_server/: settings.py  urls.py
cbt_chatbot/back-end/conversation_handler/: apps.py  models.py  serializers.py  views.py
cbt_chatbot/back-end/database_handler/: admin.py  apps.py  models.py  serializers.py  views.py
cbt_chatbot/back-end/goal_tracking/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
cbt_chatbot/back-end/message_handler/: models.py  serializers.py  views.py
cbt_chatbot/back-end/postgres_docker/: docker-compose.yaml
cbt_chatbot/back-end/users/: serializers.py  urls.py  views.py
cbt_chatbot/backend_function_calls/: cbt_module.py  chat_modes.py  system_prompts.py  views.py
cbt_chatbot/backend_server/: asgi.py  settings.py  urls.py  wsgi.py
cbt_chatbot/cbt_chatbot/: OpenAI_API.py  asgi.py  settings.py  urls.py  wsgi.py
cbt_chatbot/chatbot/: views.py
cbt_chatbot/front-end/: package-lock.json  package.json  staticwebapp.config.json  tailwind.config.js
cbt_chatbot/front-end/public/: index.html  manifest.json
cbt_chatbot/front-end/src/: App.js  index.js
cbt_chatbot/frontend/: package-lock.json  package.json
cbt_chatbot/frontend/src/: Chatbot.js
(+53 files in other folders)
