[tool.poetry]
name = "cbt-chatbot"
version = "0.1.0"
description = "This is our integrated therapy software code"
authors = ["GrantGuernsey <78874644+GrantGuernsey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = ">=3.2,<5.1"
openai = "^1.53.0"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.10"
djangorestframework-simplejwt = "^5.3.1"
mssql-django = "^1.5"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
