[tool.poetry]
name = "cbt-chatbot"
version = "0.1.0"
description = "This is our integrated therapy software code"
authors = ["GrantGuernsey <78874644+GrantGuernsey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.2"
openai = "^1.53.0"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
psycopg = "^3.2.3"
psycopg2-binary = "^2.9.10"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
